--- a/ExperimentsSelectionWidget.ui
+++ b/ExperimentsSelectionWidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>730</width>
-    <height>800</height>
+    <height>821</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -66,7 +66,7 @@
     <rect>
      <x>490</x>
      <y>540</y>
-     <width>81</width>
+     <width>51</width>
      <height>261</height>
     </rect>
    </property>
@@ -121,6 +121,52 @@
    </property>
    <property name="text">
     <string>Frame</string>
+   </property>
+  </widget>
+  <widget class="QListView" name="centrosomeListView_A">
+   <property name="geometry">
+    <rect>
+     <x>550</x>
+     <y>540</y>
+     <width>81</width>
+     <height>111</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QListView" name="centrosomeListView_B">
+   <property name="geometry">
+    <rect>
+     <x>550</x>
+     <y>690</y>
+     <width>81</width>
+     <height>111</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="centrosomesTitleLbl_A">
+   <property name="geometry">
+    <rect>
+     <x>580</x>
+     <y>520</y>
+     <width>16</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>A</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="centrosomesTitleLbl_B">
+   <property name="geometry">
+    <rect>
+     <x>580</x>
+     <y>670</y>
+     <width>16</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>B</string>
    </property>
   </widget>
  </widget>
