--- a/ExperimentsSelectionWidget.ui
+++ b/ExperimentsSelectionWidget.ui
@@ -45,39 +45,23 @@
     <enum>Qt::ScrollBarAlwaysOn</enum>
    </property>
   </widget>
-  <widget class="QListView" name="frameListView">
-   <property name="geometry">
-    <rect>
-     <x>230</x>
-     <y>540</y>
-     <width>71</width>
-     <height>261</height>
-    </rect>
-   </property>
-   <property name="isWrapping" stdset="0">
-    <bool>false</bool>
-   </property>
-   <property name="uniformItemSizes">
-    <bool>true</bool>
-   </property>
-  </widget>
   <widget class="QListView" name="centrosomeListView">
    <property name="geometry">
     <rect>
-     <x>490</x>
-     <y>540</y>
+     <x>330</x>
+     <y>570</y>
      <width>51</width>
-     <height>261</height>
+     <height>241</height>
     </rect>
    </property>
   </widget>
   <widget class="QListView" name="nucleiListView">
    <property name="geometry">
     <rect>
-     <x>400</x>
-     <y>540</y>
+     <x>230</x>
+     <y>570</y>
      <width>81</width>
-     <height>261</height>
+     <height>241</height>
     </rect>
    </property>
    <property name="selectionMode">
@@ -87,8 +71,8 @@
   <widget class="QLabel" name="nucleiTitleLbl">
    <property name="geometry">
     <rect>
-     <x>400</x>
-     <y>520</y>
+     <x>230</x>
+     <y>550</y>
      <width>56</width>
      <height>13</height>
     </rect>
@@ -100,8 +84,8 @@
   <widget class="QLabel" name="centrosomesTitleLbl">
    <property name="geometry">
     <rect>
-     <x>490</x>
-     <y>520</y>
+     <x>320</x>
+     <y>550</y>
      <width>91</width>
      <height>16</height>
     </rect>
@@ -126,28 +110,34 @@
   <widget class="QListView" name="centrosomeListView_A">
    <property name="geometry">
     <rect>
-     <x>550</x>
-     <y>540</y>
+     <x>410</x>
+     <y>570</y>
      <width>81</width>
      <height>111</height>
     </rect>
+   </property>
+   <property name="acceptDrops">
+    <bool>true</bool>
    </property>
   </widget>
   <widget class="QListView" name="centrosomeListView_B">
    <property name="geometry">
     <rect>
-     <x>550</x>
-     <y>690</y>
+     <x>410</x>
+     <y>700</y>
      <width>81</width>
      <height>111</height>
     </rect>
+   </property>
+   <property name="acceptDrops">
+    <bool>true</bool>
    </property>
   </widget>
   <widget class="QLabel" name="centrosomesTitleLbl_A">
    <property name="geometry">
     <rect>
-     <x>580</x>
-     <y>520</y>
+     <x>440</x>
+     <y>550</y>
      <width>16</width>
      <height>16</height>
     </rect>
@@ -159,14 +149,36 @@
   <widget class="QLabel" name="centrosomesTitleLbl_B">
    <property name="geometry">
     <rect>
-     <x>580</x>
-     <y>670</y>
+     <x>440</x>
+     <y>680</y>
      <width>16</width>
      <height>16</height>
     </rect>
    </property>
    <property name="text">
     <string>B</string>
+   </property>
+  </widget>
+  <widget class="QSlider" name="frameHSlider">
+   <property name="geometry">
+    <rect>
+     <x>230</x>
+     <y>490</y>
+     <width>481</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+     <horstretch>0</horstretch>
+     <verstretch>0</verstretch>
+    </sizepolicy>
+   </property>
+   <property name="maximum">
+    <number>0</number>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
    </property>
   </widget>
  </widget>
