--- a/ExperimentsSelectionWidget.ui
+++ b/ExperimentsSelectionWidget.ui
@@ -48,7 +48,7 @@
   <widget class="QListView" name="centrosomeListView">
    <property name="geometry">
     <rect>
-     <x>330</x>
+     <x>310</x>
      <y>570</y>
      <width>51</width>
      <height>241</height>
@@ -84,7 +84,7 @@
   <widget class="QLabel" name="centrosomesTitleLbl">
    <property name="geometry">
     <rect>
-     <x>320</x>
+     <x>300</x>
      <y>550</y>
      <width>91</width>
      <height>16</height>
@@ -110,9 +110,9 @@
   <widget class="QListView" name="centrosomeListView_A">
    <property name="geometry">
     <rect>
-     <x>410</x>
+     <x>360</x>
      <y>570</y>
-     <width>81</width>
+     <width>71</width>
      <height>111</height>
     </rect>
    </property>
@@ -123,9 +123,9 @@
   <widget class="QListView" name="centrosomeListView_B">
    <property name="geometry">
     <rect>
-     <x>410</x>
+     <x>360</x>
      <y>700</y>
-     <width>81</width>
+     <width>71</width>
      <height>111</height>
     </rect>
    </property>
@@ -136,7 +136,7 @@
   <widget class="QLabel" name="centrosomesTitleLbl_A">
    <property name="geometry">
     <rect>
-     <x>440</x>
+     <x>410</x>
      <y>550</y>
      <width>16</width>
      <height>16</height>
@@ -149,7 +149,7 @@
   <widget class="QLabel" name="centrosomesTitleLbl_B">
    <property name="geometry">
     <rect>
-     <x>440</x>
+     <x>410</x>
      <y>680</y>
      <width>16</width>
      <height>16</height>
@@ -181,7 +181,28 @@
     <enum>Qt::Horizontal</enum>
    </property>
   </widget>
+  <widget class="MplWidget" name="mplDistance" native="true">
+   <property name="geometry">
+    <rect>
+     <x>420</x>
+     <y>510</y>
+     <width>311</width>
+     <height>311</height>
+    </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>CrossCursor</cursorShape>
+   </property>
+  </widget>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>MplWidget</class>
+   <extends>QWidget</extends>
+   <header>mplwidget</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
