Several changes: - Renders boundary of selected nuclei with different color. - Implements selection export.

--- a/ExperimentsSelectionWidget.ui
+++ b/ExperimentsSelectionWidget.ui
@@ -181,17 +181,30 @@
     <cursorShape>CrossCursor</cursorShape>
    </property>
   </widget>
-  <widget class="QPushButton" name="exportButton">
+  <widget class="QPushButton" name="exportPandasButton">
    <property name="geometry">
     <rect>
      <x>150</x>
-     <y>480</y>
-     <width>110</width>
-     <height>32</height>
+     <y>471</y>
+     <width>121</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="text">
     <string>Export Pandas</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="exportSelectionButton">
+   <property name="geometry">
+    <rect>
+     <x>270</x>
+     <y>470</y>
+     <width>121</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Export Selection</string>
    </property>
   </widget>
  </widget>
