--- a/gui_cell_boundary.ui
+++ b/gui_cell_boundary.ui
@@ -1,179 +1,184 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
-    <class>Form</class>
-    <widget class="QWidget" name="Form">
-        <property name="geometry">
-            <rect>
-                <x>0</x>
-                <y>0</y>
-                <width>939</width>
-                <height>821</height>
-            </rect>
-        </property>
-        <property name="windowTitle">
-            <string>Form</string>
-        </property>
-        <widget class="CentrosomeImageQLabel" name="movieImgLabel">
-            <property name="geometry">
-                <rect>
-                    <x>450</x>
-                    <y>0</y>
-                    <width>512</width>
-                    <height>512</height>
-                </rect>
-            </property>
-            <property name="text">
-                <string>TextLabel</string>
-            </property>
-            <property name="scaledContents">
-                <bool>true</bool>
-            </property>
-            <property name="alignment">
-                <set>Qt::AlignCenter</set>
-            </property>
-        </widget>
-        <widget class="QTreeView" name="experimentsTreeView">
-            <property name="geometry">
-                <rect>
-                    <x>0</x>
-                    <y>0</y>
-                    <width>151</width>
-                    <height>511</height>
-                </rect>
-            </property>
-            <property name="verticalScrollBarPolicy">
-                <enum>Qt::ScrollBarAlwaysOn</enum>
-            </property>
-        </widget>
-        <widget class="QListView" name="nucleiListView">
-            <property name="geometry">
-                <rect>
-                    <x>160</x>
-                    <y>30</y>
-                    <width>81</width>
-                    <height>431</height>
-                </rect>
-            </property>
-            <property name="selectionMode">
-                <enum>QAbstractItemView::SingleSelection</enum>
-            </property>
-        </widget>
-        <widget class="QLabel" name="nucleiTitleLbl">
-            <property name="geometry">
-                <rect>
-                    <x>160</x>
-                    <y>10</y>
-                    <width>56</width>
-                    <height>13</height>
-                </rect>
-            </property>
-            <property name="text">
-                <string>Nuclei</string>
-            </property>
-        </widget>
-        <widget class="QSlider" name="frameHSlider">
-            <property name="geometry">
-                <rect>
-                    <x>450</x>
-                    <y>490</y>
-                    <width>481</width>
-                    <height>20</height>
-                </rect>
-            </property>
-            <property name="sizePolicy">
-                <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-                    <horstretch>0</horstretch>
-                    <verstretch>0</verstretch>
-                </sizepolicy>
-            </property>
-            <property name="maximum">
-                <number>0</number>
-            </property>
-            <property name="orientation">
-                <enum>Qt::Horizontal</enum>
-            </property>
-        </widget>
-        <widget class="MplWidget" name="mplDistance" native="true">
-            <property name="geometry">
-                <rect>
-                    <x>0</x>
-                    <y>500</y>
-                    <width>941</width>
-                    <height>321</height>
-                </rect>
-            </property>
-            <property name="sizePolicy">
-                <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
-                    <horstretch>0</horstretch>
-                    <verstretch>0</verstretch>
-                </sizepolicy>
-            </property>
-            <property name="cursor">
-                <cursorShape>CrossCursor</cursorShape>
-            </property>
-        </widget>
-        <widget class="QPushButton" name="exportPandasButton">
-            <property name="geometry">
-                <rect>
-                    <x>150</x>
-                    <y>471</y>
-                    <width>121</width>
-                    <height>41</height>
-                </rect>
-            </property>
-            <property name="text">
-                <string>Export Pandas</string>
-            </property>
-        </widget>
-        <widget class="QPushButton" name="exportSelectionButton">
-            <property name="geometry">
-                <rect>
-                    <x>320</x>
-                    <y>470</y>
-                    <width>121</width>
-                    <height>41</height>
-                </rect>
-            </property>
-            <property name="text">
-                <string>Export Selection</string>
-            </property>
-        </widget>
-        <widget class="QPushButton" name="importSelectionButton">
-            <property name="geometry">
-                <rect>
-                    <x>320</x>
-                    <y>430</y>
-                    <width>121</width>
-                    <height>41</height>
-                </rect>
-            </property>
-            <property name="text">
-                <string>Import Selection</string>
-            </property>
-        </widget>
-        <zorder>movieImgLabel</zorder>
-        <zorder>experimentsTreeView</zorder>
-        <zorder>nucleiListView</zorder>
-        <zorder>nucleiTitleLbl</zorder>
-        <zorder>mplDistance</zorder>
-        <zorder>exportPandasButton</zorder>
-        <zorder>exportSelectionButton</zorder>
-        <zorder>importSelectionButton</zorder>
-        <zorder>frameHSlider</zorder>
-    </widget>
-    <customwidgets>
-        <customwidget>
-            <class>MplWidget</class>
-            <extends>QWidget</extends>
-            <header>gui_mplwidget</header>
-            <container>1</container>
-        </customwidget>
-        <customwidget>
-            <class>CentrosomeImageQLabel</class>
-            <extends>QLabel</extends>
-            <header>gui_centrosome_image_qlabel</header>
-        </customwidget>
-    </customwidgets>
-    <resources/>
-    <connections/>
+ <class>Form</class>
+ <widget class="QWidget" name="Form">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>939</width>
+    <height>821</height>
+   </rect>
+  </property>
+  <property name="windowTitle">
+   <string>Form</string>
+  </property>
+  <widget class="CentrosomeImageQLabel" name="movieImgLabel">
+   <property name="geometry">
+    <rect>
+     <x>450</x>
+     <y>0</y>
+     <width>512</width>
+     <height>512</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
+   </property>
+   <property name="scaledContents">
+    <bool>true</bool>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QTreeView" name="experimentsTreeView">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>151</width>
+     <height>511</height>
+    </rect>
+   </property>
+   <property name="verticalScrollBarPolicy">
+    <enum>Qt::ScrollBarAlwaysOn</enum>
+   </property>
+  </widget>
+  <widget class="QListView" name="nucleiListView">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>30</y>
+     <width>81</width>
+     <height>431</height>
+    </rect>
+   </property>
+   <property name="selectionMode">
+    <enum>QAbstractItemView::SingleSelection</enum>
+   </property>
+  </widget>
+  <widget class="QLabel" name="nucleiTitleLbl">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>10</y>
+     <width>56</width>
+     <height>13</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Nuclei</string>
+   </property>
+  </widget>
+  <widget class="MplWidget" name="mplDistance" native="true">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>500</y>
+     <width>941</width>
+     <height>321</height>
+    </rect>
+   </property>
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+     <horstretch>0</horstretch>
+     <verstretch>0</verstretch>
+    </sizepolicy>
+   </property>
+   <property name="cursor">
+    <cursorShape>CrossCursor</cursorShape>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="exportPandasButton">
+   <property name="geometry">
+    <rect>
+     <x>150</x>
+     <y>471</y>
+     <width>121</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Export Pandas</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="exportSelectionButton">
+   <property name="geometry">
+    <rect>
+     <x>320</x>
+     <y>470</y>
+     <width>121</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Export Selection</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="importSelectionButton">
+   <property name="geometry">
+    <rect>
+     <x>320</x>
+     <y>430</y>
+     <width>121</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Import Selection</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit">
+   <property name="geometry">
+    <rect>
+     <x>250</x>
+     <y>50</y>
+     <width>131</width>
+     <height>21</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="gaborThresholdLbl">
+   <property name="geometry">
+    <rect>
+     <x>250</x>
+     <y>30</y>
+     <width>131</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Gabor Filter threshold</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="renderButton">
+   <property name="geometry">
+    <rect>
+     <x>320</x>
+     <y>390</y>
+     <width>121</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Render Boxplot</string>
+   </property>
+  </widget>
+ </widget>
+ <customwidgets>
+  <customwidget>
+   <class>MplWidget</class>
+   <extends>QWidget</extends>
+   <header>gui_mplwidget</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>CentrosomeImageQLabel</class>
+   <extends>QLabel</extends>
+   <header>gui_centrosome_image_qlabel</header>
+  </customwidget>
+ </customwidgets>
+ <resources/>
+ <connections/>
 </ui>
