Implements gabor update upon changing threshold in the text box.

--- a/gui_cell_boundary.ui
+++ b/gui_cell_boundary.ui
@@ -129,7 +129,7 @@
     <string>Import Selection</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit">
+  <widget class="QLineEdit" name="gaborLineEdit">
    <property name="geometry">
     <rect>
      <x>250</x>
