Render boxplot of distances towards nuclei and cell boundary at time of contact.

--- a/gui_cell_boundary.ui
+++ b/gui_cell_boundary.ui
@@ -152,7 +152,7 @@
     <string>Gabor Filter threshold</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="renderButton">
+     <widget class="QPushButton" name="renderBoxplotButton">
    <property name="geometry">
     <rect>
      <x>320</x>
